--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,12 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
+      - echo Installing dependencies...
       - npm install
   build:
     commands:
-      - echo "Build completed on `date`"
+      - echo Build complete.
 artifacts:
   files:
     - '**/*'
+
